# Interpreter-Assistant

./: README.md  pyproject.toml
.github/workflows/: docs.yml
docs/: mkdocs.yml
docs/docs/: configuration.md  development.md
docs/docs/api/: audio_io.md  deepgram.md  utils.md
interpreter_assistant/: __init__.py
interpreter_assistant/audio_io/: __init__.py  buffer_manager.py  capture.py
interpreter_assistant/entrypoints/: cli.py
interpreter_assistant/services/deepgram/: __init__.py  adapter.py  client.py
interpreter_assistant/utils/: config_loader.py  logger.py
tests/: conftest.py  test_audio_io.py  test_cli.py  test_deepgram.py
